configurando swagger para todos os endpoints
