# src/api/produtos.js
@@ -5,23 +5,24 @@ const ProdutoService = require("../services/produtos");
 
 const produtoService = new ProdutoService(produto);
 
-router.get("/", async (req, res) => {
-  /*
-    #swagger.tags = ['Produtos']
-    #swagger.description = 'Endpoint parra obter uma lista de produto' 
-    #swagger.responses[200] = {
-      schema: { $ref: "#/definitions/Produto"},
-      description: 'Produto encontrado'
-    }
-    #swagger.responses[404] = {
-      description: 'Produto não encontrado'
-    }
-    #swagger.responses[400] = {
-      description: 'Desculpe, tivemos um problema com a requisição'
-    }
-  */
-  const produtos = await produtoService.get();
-  res.status(200).json(produtos);
-});
+router.get("/",
+  async (req, res) => {
+    /*
+      #swagger.tags = ['Produtos']
+      #swagger.description = 'Endpoint para obter uma lista de produtos.' 
+      #swagger.responses[200] = {
+        description: 'Produto encontrado!',
+        schema: {$ref: "#/definitions/Produtos"}
+      }
+      #swagger.responses[404] = {
+        description: 'Não existem produtos cadastrados!'
+      }
+      #swagger.responses[400] = {
+        description: 'Desculpe, tivemos um problema com a requisição!'
+      }
+    */
+    const produtos = await produtoService.get();
+    res.status(200).json(produtos);
+  });
 
 module.exports = router;
